k8s/manifests/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: store
spec:
  replicas: 1
  selector:
    matchLabels:
      app: store
  template:
    metadata:
      labels:
        app: store
    spec:
      containers:
        - name: store
          image: docker.io/devasheesh22/filestore-app:latest
          ports:
            - containerPort: 8080
