k8s/manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: store
spec:
  selector:
    app: store
  ports:
    - port: 8000
      targetPort: 8080
  type: ClusterIP
