k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: project
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: project.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: store
                port:
                  number: 8000
